# sniplink

./: .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
config/: settings.py  urls.py
shortener/: admin.py  models.py  serializers.py  urls.py  views.py
shortener/migrations/: 0001_initial.py
